--- a/work/chopwood/index.html
+++ b/work/chopwood/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Pizza Craft by UltraMelon</title>
+    <title>Chop Wood by Sage Realities</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-light fadeIn" id="myNavbar">
       
       <!-- Brand -->
-      <a class="navbar-brand" href="../../index.html">Nikhil Jolly</a>
+      <a class="navbar-brand" href="../../">Nikhil Jolly</a>
 
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto nav-pills" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link" id="personal-tab" href="../../index.html#personal">personal</a>
+            <a class="nav-link" id="personal-tab" href="../../">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" id="work-tab" href="../../index.html#work">work</a>
+            <a class="nav-link active" id="work-tab" href="../../work/">work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-tab" href="../../index.html#about">about</a>
+            <a class="nav-link" id="about-tab" href="../../about/">about</a>
           </li>
         </ul>
       </div>
@@ -54,23 +54,31 @@
       <div class="row">
 
         <!-- Gallery -->
-        <div class="col-xl-6 post-carousel">
+        <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 post-carousel">
 
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner">
+              <div class="carousel-item">
+                <img class="d-block w-100" src="1.png" alt="Chop Wood 1">
+              </div>
               <div class="carousel-item active">
-                <img class="d-block w-100" src="../../assets/img/pizzacraft/1.jpg" alt="Pizza Craft 1">
+                <img class="d-block w-100" src="2.png" alt="Chop Wood 2">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/pizzacraft/2.jpg" alt="Pizza Craft 2">
+                <img class="d-block w-100" src="3.png" alt="Chop Wood 3">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/pizzacraft/3.jpg" alt="Pizza Craft 3">
+                <img class="d-block w-100" src="4.png" alt="Chop Wood 4">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="5.png" alt="Chop Wood 5">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -81,34 +89,44 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+
           </div>
+
         </div>
 
         <!-- Description -->
-        <div class="col-xl-6 post-text">
+        <div class="col-xl-9 col-lg-8 col-md-12 col-sm-12 post-text">
 
-          <h2>Pizza Craft</h2>
+          <h2>Chop Wood: Daily Mindfulness Challenge</h2>
           <br>
-          <h5>Become the best pizza crafter!</h5>
+          <h5>Inspired by a Zen proverb, Chop Wood Daily Mindfulness Challenge is a minimalist wood-splitting activity that promotes simplicity, harmony, and relaxation.</h5>
           <br>
-          <b>How to play:</b>
-          <br>
-          <ul>
-            <li>Tap & drag to place the ingredients</li>
-            <li>Speed Increases the farther you get!</li>
-            <li>Use all 5 ingredients to make what the customers want</li>
-            <li>Craft like a pro and get the highest score!</li>
-          </ul>
+          Set in a tranquil Japanese-style landscape, with ever-changing seasonal conditions, and a captivating original soundtrack, Chop Wood aspires to bring you peace through play.
+          <br><br>
+          Is Chop Wood a meditation disguised as a game; or is it a game disguised as a meditation? Both! It is an experience designed to promote well-being through engagement, rather than formal instruction.
+          <br><br>
+          While most meditation and mindfulness apps guide the participant, Chop Wood locates the player within a visual poem where there is a simple, repetitive task, a rhythmic engagement, a peaceful context, uplifting music, and a satisfying action.
+          <br><br>
+          Chop Wood is a game of days intended to be played in short intervals over extended periods of time. It is a game. It is a practice. It is a meditation. It asks you to slow down. Unlike most games, Chop Wood’s game-play has a daily limit. When you run out of energy the game is over until the next calendar day. Chop Wood seeks to enhance your life, not take it over.
+          <br><br>
+          Can a game help you to relax? Can a game add balance to your day? We think so! Our goal is to create a satisfying yet calming mobile gaming experience: A Tamagotchi for the Soul.
+          <br><br>
+          We hope you will find peace in this simple activity.
+          <br><br>
           <b>Features:</b>
           <br>
           <ul>
-            <li>Conveyor gets faster the more pizzas you make</li>
-            <li>Do or Die game play (Only one mistake allowed)</li>
-            <li>5 yummy ingredients to use to make a pizza!</li>
+            <li>Dynamic game weather based on player location</li>
+            <li>Original soundtrack by renowned composer Michiyo Yagi</li>
+            <li>Seasonal scenery inspired by Japanese prints</li>
+            <li>22 Color Grades</li>
+            <li>8 Animal Badges</li>
+            <li>Pay once, play forever</li>
+            <li>No subscriptions, in-app purchases or advertisements</li>
           </ul>
-          <br>
-          Copyright © 2017 UltraMelon Apps. All Rights Reserved.
-
+          Find more about the game <a href="http://www.chopwoodgame.com/">here</a>.
+          <br><br>
+          Copyright © 2017 Sage Immersive Realities Inc. All Rights Reserved.
         </div>
 
       </div>
