--- a/index.html
+++ b/index.html
@@ -25,236 +25,83 @@
       <a class="navbar-brand" href="">Nikhil Jolly</a>
 
       <!-- Toggler -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <!-- Toggle Pills -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav navbar-nav ml-auto nav-pills nav-fill" id="pills-tab" role="tablist">
+        <ul class="nav navbar-nav ml-auto nav-pills nav-fill" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link active" id="personal-tab" data-toggle="pill" href="#personal" role="tab" aria-controls="personal" aria-selected="true">personal<span class="sr-only">(current)</span></a>
+            <a class="nav-link active" id="personal-tab" href="">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="work-tab" data-toggle="pill" href="#work" role="tab" aria-controls="work" aria-selected="false">work</a>
+            <a class="nav-link" id="work-tab" href="work/">work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-tab" data-toggle="pill" href="#about" role="tab" aria-controls="about" aria-selected="false">about</a>
+            <a class="nav-link" id="about-tab" href="about/">about</a>
           </li>
         </ul>
       </div>
 
     </nav>
 
-    <!-- Tabs content -->
+    <!-- Personal -->
+    <div class="container-fluid fadeIn portfolio">
 
-    <div class="tab-content" id="pills-tabContent">
-
-      <!-- Personal -->
-      <div class="tab-pane active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
-
-        <div class="container-fluid fadeIn portfolio">
-
-          <div class="row">
-            <!-- tiny little boat -->
-            <div class="col-md-9">
-              <img src="assets/img/tinylittleboat/1.png" class="img-fluid" alt="tiny little boat">
-              <a href="posts/personal/tinylittleboat.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>tiny little boat</h3>
-                    <h6>Solo | Game Jam</h6>
-                  </div>
-                </div>
-              </a>
+      <div class="row">
+        <!-- tiny little boat -->
+        <div class="col-md-9">
+          <img src="personal/tinylittleboat/1.png" class="img-fluid" alt="tiny little boat">
+          <a href="personal/tinylittleboat/">
+            <div class="overlay">
+              <div class="text">
+                <h3>tiny little boat</h3>
+                <h6>Solo | Game Jam</h6>
+              </div>
             </div>
-            <!-- Domination -->
-            <div class="col-md-3">
-              <img src="assets/img/domination/1.jpg" class="img-fluid" alt="Domination">
-              <a href="posts/personal/domination.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>Domination</h3>
-                    <h6>Solo | Indie</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="row">
-            <!-- Game of life -->
-            <div class="col-md-4 last-col">
-              <img src="assets/img/gameoflife/cover.jpg" class="img-fluid" alt="Game of Life">
-              <a href="posts/personal/gameoflife.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>Game of Life</h3>
-                    <h6>Solo | Open source</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Dead Dreams -->
-            <div class="col-md-8 last-col">
-              <img src="assets/img/deaddreams/5.png" class="img-fluid" alt="Dead Dreams">
-              <a href="posts/personal/deaddreams.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>Dead Dreams</h3>
-                    <h6>Game Designer/Developer | Game Jam</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
+          </a>
         </div>
-
+        <!-- Domination -->
+        <div class="col-md-3">
+          <img src="personal/domination/1.jpg" class="img-fluid" alt="Domination">
+          <a href="personal/domination/">
+            <div class="overlay">
+              <div class="text">
+                <h3>Domination</h3>
+                <h6>Solo | Indie</h6>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
 
-      <!-- Work -->
-      <div class="tab-pane" id="work" role="tabpanel" aria-labelledby="work-tab">
-
-        <div class="container-fluid fadeIn portfolio">
-
-          <div class="row">
-            <!-- Pizza Craft -->
-            <div class="col-md-7">
-              <img src="assets/img/pizzacraft/cover.png" class="img-fluid" alt="Pizza Craft">
-              <a href="posts/work/pizzacraft.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>Pizza Craft</h3>
-                    <h6>Game Developer</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Chop Wood -->
-            <div class="col-md-5">
-              <img src="assets/img/chopwood/cover.png" class="img-fluid" alt="Chop Wood">
-              <a href="posts/work/chopwood.html">
-                <div class="overlay">
-                  <div class="text">
-                    <h3>Chop Wood</h3>
-                    <h6>Game Developer</h6>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="row">
-            <!-- Chop Wood Zen Master -->
-            <div class="col-md-3">
-              <img src="assets/img/chopwoodzen/1.jpg" class="img-fluid" alt="Chop Wood Zen Master">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Chop Wood Zen Master</h3>
-                  <h6>Game Developer</h6>
-                </div>
+      <div class="row">
+        <!-- Game of life -->
+        <div class="col-md-4 last-col">
+          <img src="personal/gameoflife/cover.jpg" class="img-fluid" alt="Game of Life">
+          <a href="personal/gameoflife/">
+            <div class="overlay">
+              <div class="text">
+                <h3>Game of Life</h3>
+                <h6>Solo | Open source</h6>
               </div>
             </div>
-            <!-- Mirrors -->
-            <div class="col-md-6">
-              <img src="assets/img/reflections/cover.jpg" class="img-fluid" alt="Mirrors">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Mirrors</h3>
-                  <h6>Solo</h6>
-                </div>
-              </div>
-            </div>
-            <!-- Wrong Lane -->
-            <div class="col-md-3">
-              <img src="assets/img/wronglane/1.png" class="img-fluid" alt="Wrong Lane">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Wrong Lane</h3>
-                  <h6>Solo</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <!-- Crazy Jumper -->
-            <div class="col-md-6">
-              <img src="assets/img/crazyjumper/cover.jpg" class="img-fluid" alt="Crazy Jumper">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Crazy Jumper</h3>
-                  <h6>Solo</h6>
-                </div>
-              </div>
-            </div>
-            <!-- Adventure Island -->
-            <div class="col-md-6">
-              <img src="assets/img/3disland/cover.jpg" class="img-fluid" alt="Adventure Island">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Adventure Island</h3>
-                  <h6>Solo</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-
+          </a>
         </div>
-
-      </div>
-
-      <!-- About -->
-      <div class="tab-pane" id="about" role="tabpanel" aria-labelledby="about-tab">
-
-        <div class="container-fluid fadeIn">
-
-          <div class="row">
-            <!-- About Image -->
-            <div class="col-lg-5" id="about-img">
+        <!-- Dead Dreams -->
+        <div class="col-md-8 last-col">
+          <img src="personal/deaddreams/5.png" class="img-fluid" alt="Dead Dreams">
+          <a href="personal/deaddreams/">
+            <div class="overlay">
+              <div class="text">
+                <h3>Dead Dreams</h3>
+                <h6>Game Designer/Developer | Game Jam</h6>
+              </div>
             </div>
-            <!-- About Text -->
-            <div class="col-lg-7" id="about-text">
-
-                <h1>About me</h1><br>
-
-                <h6>Falling in love just a little bit more, each and every passing day, with the things that I like.</h6><br>
-
-                <p>Yello stranger! In an age like ours we should all be renaissance men. I, for one, aspire to be.</p>
-
-                <p>On a casual day, I develop games as a freelancer, work on my personal projects and improve my art & composition skills. And occasionally, I tend to tinker with new things and explore new places.</p>
-
-                <p>More often than not, I spend a lot of time thinking, taking a stroll down the road, listening to music, unashamedly dancing, reading stuff online and of-course improving myself. </p>
-
-                <p>Stranger! Wherefore art thou a stranger? Hit me up at:</p>
-
-                <a href="mailto:nikhil.jolly30@gmail.com"><span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span></a>
-
-                <a href="https://twitter.com/nikhil_jolly"><span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span></a>
-
-                <a href="https://www.linkedin.com/in/nikhiljolly"><span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span></a>
-
-                <br><br>
-                <p>PS: Mostly showcasing my game design and deveopment projects here.</p>
-
-            </div>
-
-          </div>
-
+          </a>
         </div>
-
       </div>
-
 
     </div>
 
