--- a/personal/deaddreams/index.html
+++ b/personal/deaddreams/index.html
@@ -22,10 +22,10 @@
     <nav class="navbar navbar-expand-md navbar-light fadeIn" id="myNavbar">
       
       <!-- Brand -->
-      <a class="navbar-brand" href="../../index.html">Nikhil Jolly</a>
+      <a class="navbar-brand" href="../../">Nikhil Jolly</a>
 
       <!-- Toggler -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto nav-pills" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link active" id="personal-tab" href="../../index.html#personal">personal</a>
+            <a class="nav-link active" id="personal-tab" href="../../">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="work-tab" href="../../index.html#work">work</a>
+            <a class="nav-link" id="work-tab" href="../../work/">work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-tab" href="../../index.html#about">about</a>
+            <a class="nav-link" id="about-tab" href="../../about/">about</a>
           </li>
         </ul>
       </div>
@@ -65,19 +65,19 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="../../assets/img/deaddreams/1.png" alt="Dead Dreams 1">
+                <img class="d-block w-100" src="1.png" alt="Dead Dreams 1">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/deaddreams/2.png" alt="Dead Dreams 2">
+                <img class="d-block w-100" src="2.png" alt="Dead Dreams 2">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/deaddreams/3.png" alt="Dead Dreams 3">
+                <img class="d-block w-100" src="3.png" alt="Dead Dreams 3">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/deaddreams/4.png" alt="Dead Dreams 4">
+                <img class="d-block w-100" src="4.png" alt="Dead Dreams 4">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/deaddreams/5.png" alt="Dead Dreams 5">
+                <img class="d-block w-100" src="5.png" alt="Dead Dreams 5">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
