--- a/personal/domination/index.html
+++ b/personal/domination/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>tiny little boat by Nikhil Jolly</title>
+    <title>Domination by Nikhil Jolly</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-light fadeIn" id="myNavbar">
       
       <!-- Brand -->
-      <a class="navbar-brand" href="../../index.html">Nikhil Jolly</a>
+      <a class="navbar-brand" href="../../">Nikhil Jolly</a>
 
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto nav-pills" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link active" id="personal-tab" href="../../index.html#personal">personal</a>
+            <a class="nav-link active" id="personal-tab" href="../../">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="work-tab" href="../../index.html#work">work</a>
+            <a class="nav-link" id="work-tab" href="../../work/">work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-tab" href="../../index.html#about">about</a>
+            <a class="nav-link" id="about-tab" href="../../about/">about</a>
           </li>
         </ul>
       </div>
@@ -53,7 +53,7 @@
       <div class="row">
 
         <!-- Gallery -->
-        <div class="col-xl-6 post-carousel">
+        <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 post-carousel">
 
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -63,17 +63,17 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
+              <div class="carousel-item">
+                <img class="d-block w-100" src="1.jpg" alt="Domination 1">
+              </div>
               <div class="carousel-item active">
-                <img class="d-block w-100" src="../../assets/img/tinylittleboat/0.png" alt="boat 1">
+                <img class="d-block w-100" src="2.jpg" alt="Domination 2">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/tinylittleboat/1.png" alt="boat 2">
+                <img class="d-block w-100" src="3.jpg" alt="Domination 3">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/tinylittleboat/2.png" alt="boat 3">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/img/tinylittleboat/3.png" alt="boat 4">
+                <img class="d-block w-100" src="4.jpg" alt="Domination 4">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -84,29 +84,38 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+
           </div>
+
         </div>
 
         <!-- Description -->
-        <div class="col-xl-6 post-text">
+        <div class="col-xl-9 col-lg-8 col-md-12 col-sm-12 post-text">
 
-          <h2>tiny little boat</h2>
+          <h2>Domination</h2>
           <br>
-          <h5>Float your tiny little boat and indulge yourself in this zen experience.</h5>
+          <h5>Domination is a minimal & unique multi-player strategy game in which you have to dominate the board by converting all the tiles to your color.</h5>
           <br>
-          <b>Controls:</b>
+          <b>Rules:</b>
           <br><br>
-          Use W, A, S, D or Up, Down, Left, Right to float the boat.
+          Start the path from tile of your color and end the path at a tile (which was already) of your color, whilst converting the opponent's tiles. The player who dominates the board by converting all the tiles to his/her color, wins!
           <br><br>
-          <b>Credits:</b>
+          <b>Features:</b>
           <br><br>
-          Created by Nikhil Jolly in a week for WeeklyGameJam 16.
+          - Single Player Mode:
+          <br>
+          Play vs Computer with three levels of AI: Novice, Semi-Pro & Pro.
+          <br>
+          Leaderboards: 5 Points for Novice, 50 for Semi-Pro & 500 for Pro.
+          <br>
+          Matches Manager: Maintains the matches details.
           <br><br>
-          Music by Eric Matyas - www.soundimage.org
+          - Local Multiplayer Mode:
+          <br>Play with your friend locally, i.e. on the same device.
           <br><br>
-          Special Thanks to Peayush Bhardhwaj.
+          Play the game at <a href="https://play.google.com/store/apps/details?id=com.domination">playstore</a>.
           <br><br>
-          Play the game at <a href="https://nikhiljolly.itch.io/tiny-little-boat">itch</a>.
+          PS: Proudly made with libGDX.
 
         </div>
 
