--- a/about/index.html
+++ b/about/index.html
@@ -45,6 +45,8 @@
       </div>
 
     </nav>
+    
+    <hr>
 
     <!-- About -->
     <div class="container-fluid fadeIn" id="about">
@@ -66,7 +68,7 @@
 
             <p>More often than not, I spend a lot of time thinking, taking a stroll down the road, listening to music, unashamedly dancing, reading stuff online and of-course improving myself. </p>
 
-            <p>Stranger! Wherefore art thou a stranger? Hit me up at:</p>
+            <p>Wherefore art thou a stranger? Hit me up at:</p>
 
             <a href="mailto:nikhil.jolly30@gmail.com"><span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -84,13 +86,20 @@
             </span></a>
 
             <br><br>
-            <p>PS: Mostly showcasing my game design and deveopment projects here.</p>
+            <p>PS: Mostly showcasing my game design and development projects here.</p>
 
         </div>
 
       </div>
 
     </div>
+    
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
