--- a/personal/domination/index.html
+++ b/personal/domination/index.html
@@ -45,6 +45,8 @@
       </div>
 
     </nav>
+    
+    <hr>
 
     <!-- Post -->
 
@@ -52,7 +54,7 @@
 
       <div class="row">
 
-        <!-- Gallery -->
+        <!-- Carousel -->
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 post-carousel">
 
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -86,42 +88,41 @@
             </a>
 
           </div>
-
+          
         </div>
 
         <!-- Description -->
         <div class="col-xl-9 col-lg-8 col-md-12 col-sm-12 post-text">
 
-          <h2>Domination</h2>
+          <h2 class="text-center">Domination</h2>
           <br>
-          <h5>Domination is a minimal & unique multi-player strategy game in which you have to dominate the board by converting all the tiles to your color.</h5>
+          <h5>A minimal & unique multi-player strategy game in which you have to dominate the board by converting all the tiles to your color.</h5>
           <br>
-          <b>Rules:</b>
+          Domination is the <b>first game</b> that I released as an Indie developer. At the time I was dabbling with a <b>custom game framework</b> and a lot of other frameworks/engines; noticeably libgdx, Unity and cocos2d-x.
           <br><br>
-          Start the path from tile of your color and end the path at a tile (which was already) of your color, whilst converting the opponent's tiles. The player who dominates the board by converting all the tiles to his/her color, wins!
+          I first developed the prototype on my tiny custom framework in java. And later on I developed the complete game in <b>Unity</b>, considering it's fabulous cross-platform capabilities. The first release had both <b>local and online multiplayer</b> mode (using <b>Photon</b>).
           <br><br>
-          <b>Features:</b>
+          All this while I was playing around with libgdx and working on the <b>single player AI</b> for the game. To increase my speed of testing different turns and scenarious for the AI, I developed the AI algorithm as a native console application. Once I was done with the basic algorithm, I moved back to Unity. However, by that time I <b>fell in love with libgdx</b> and was considering porting the game on it.
           <br><br>
-          - Single Player Mode:
+          Later on, I did realeased the final update in libgdx.
           <br>
-          Play vs Computer with three levels of AI: Novice, Semi-Pro & Pro.
-          <br>
-          Leaderboards: 5 Points for Novice, 50 for Semi-Pro & 500 for Pro.
-          <br>
-          Matches Manager: Maintains the matches details.
-          <br><br>
-          - Local Multiplayer Mode:
-          <br>Play with your friend locally, i.e. on the same device.
-          <br><br>
-          Play the game at <a href="https://play.google.com/store/apps/details?id=com.domination">playstore</a>.
-          <br><br>
-          PS: Proudly made with libGDX.
+          <center>
+            <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://play.google.com/store/apps/details?id=com.domination" role="button">Playstore</a>
+            <br><br>Made with <i class="fa fa-heart-o"></i> using <a href="https://libgdx.badlogicgames.com/" class="text-info">libGDX</a>.
+          </center>
 
         </div>
 
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
