--- a/personal/magnes/index.html
+++ b/personal/magnes/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Dead Dreams by Nikhil Jolly</title>
+    <title>Magnes by Nikhil Jolly</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
       </div>
 
     </nav>
-
+    
     <hr>
 
     <!-- Post -->
@@ -57,30 +57,40 @@
         <!-- Gallery -->
         <div class="col-xl-6 video-col">
 
-          <h2 class="title">Dead Dreams</h2>
-
+          <h2 class="title">Magnes</h2>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GRKUUmJLFjk?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Fw2gX1cKDFg?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           </div>
-
-          <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://nikhiljolly.itch.io/dead-dreams" role="button">Play</a>
+          <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://nikhiljolly.itch.io/magnes" role="button">Play</a>
 
         </div>
 
         <!-- Description -->
         <div class="col-xl-6 post-text">
+          <h5>Survive the epidemic by absorbing red junk while blasting your enemies to smithereens.</h5>
+          <br>
+          Magnes is another game that I <b>made in a week</b> for the WeeklyGameJam 19. The theme of the jam was, <b>Attraction</b>. It's a fast-paced action game in which you play as a human cyborg.
+          <br><br>
+          My primary reason to take part in this game jam was to improve my design thinking and skills. Thereby some of the underlying code-base and art wasn't completely developed by me. Also, considering the limited time that I had, I primarily wanted to <b>focus on design</b>.
+          <br><br>
+          Here's a brief on <b>how I actually did things</b> behind the scenes:
+          <ul>
+            <li><b>Ideation and game design</b></li>
+            <li>Level design: The level is actually <b>procedurally generated</b>. However, I chose one level among the many randomly generated levels.</li>
+            <li>Player controller and flying using the 3rd person asset listed below. Although had to make quite a few alterations to it.</li>
+            <li>Enemy and AI: Built <b>enemy movement and AI from scratch</b>, mostly using navmesh.</li>
+            <li>Created <b>VFX using Unity's built-in particle system</b>, inspired from Unity's particle pack. The enemy's beam is a modified version of the asset listed below.</li>
+            <li>Created <b>music loop using GarageBand</b>.</li>
+            <li>Quick and cheap UI design to finish in time.</li>
+          </ul>
+          And here's a list of the free resources that I used:
+          <ul>
+            <li><a href="https://assetstore.unity.com/packages/templates/systems/3rd-person-controller-fly-mode-28647" class="text-info">3rd Person + Fly</a></li>
+            <li><a href="https://assetstore.unity.com/packages/3d/vehicles/space/uav-trident-46128" class="text-info">Enemy ship</a></li>
+            <li><a href="https://assetstore.unity.com/packages/vfx/particles/basicbeamshot-free-27665" class="text-info">Basic beam shot</a></li>
+          </ul>
 
-          <div class="d-none d-xl-block"><br><br></div>
-          <h5>A game about an ordinary boy, with an extraordinary childhood, marred with stressful memories.
-          Will he be able to survive another nightmare?</h5>
-          <br>
-          Dead Dreams is a game that I made with Rahul Parihar <b>in 2 days</b> for the BYOG 17 game jam. In the game you play as a boy who is harrassed by dark memories and has to fight back with the few good memories that he reminisces.
-          <br><br>
-          The game was <b>built from scratch</b> in Unity3d. I primarily <b>focused on development</b>, while Rahul focused on making the 3d art and models. We both worked together in the <b>ideation and game design</b> process. After a lot of dabbling around with lights and post-processing effects, we finalized the <b>low-poly pixel art style</b> that you can currently see in the game.
-          <br><br>
-          <b>Guide:</b>
-          <br>
-          Press left click to call good memories towards you, and release to shoot.
+
 
         </div>
 
