--- a/work/chopwood/index.html
+++ b/work/chopwood/index.html
@@ -46,16 +46,17 @@
 
     </nav>
 
+    <hr>
 
     <!-- Post -->
 
-    <div class="container-fluid post slideUp">
+    <div class="container-fluid post fadeIn">
 
       <div class="row">
 
         <!-- Gallery -->
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 post-carousel">
-
+          
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -97,41 +98,39 @@
         <!-- Description -->
         <div class="col-xl-9 col-lg-8 col-md-12 col-sm-12 post-text">
 
-          <h2>Chop Wood: Daily Mindfulness Challenge</h2>
+          <h2 class="text-center">Chop Wood: Daily Mindfulness Game</h2>
           <br>
-          <h5>Inspired by a Zen proverb, Chop Wood Daily Mindfulness Challenge is a minimalist wood-splitting activity that promotes simplicity, harmony, and relaxation.</h5>
+          <h5>A minimalist wood-splitting activity that promotes simplicity, harmony, and relaxation.</h5>
           <br>
-          Set in a tranquil Japanese-style landscape, with ever-changing seasonal conditions, and a captivating original soundtrack, Chop Wood aspires to bring you peace through play.
+          Set in a tranquil Japanese-style landscape, with ever-changing seasonal conditions, and a captivating original soundtrack, Chop Wood aspires to bring you peace through play. A game of days intended to be played in short intervals over extended periods of time, seeking to enhance your life, not take it over.
           <br><br>
-          Is Chop Wood a meditation disguised as a game; or is it a game disguised as a meditation? Both! It is an experience designed to promote well-being through engagement, rather than formal instruction.
+          Chop Wood is a <b>zen game</b> that I made for Sage Realities. As the <b>sole developer</b> on the team my responsibility was to program the game from <b>scratch in Unity</b>. The game was developed for both <b>iOS and Android</b> platform.
           <br><br>
-          While most meditation and mindfulness apps guide the participant, Chop Wood locates the player within a visual poem where there is a simple, repetitive task, a rhythmic engagement, a peaceful context, uplifting music, and a satisfying action.
-          <br><br>
-          Chop Wood is a game of days intended to be played in short intervals over extended periods of time. It is a game. It is a practice. It is a meditation. It asks you to slow down. Unlike most games, Chop Wood’s game-play has a daily limit. When you run out of energy the game is over until the next calendar day. Chop Wood seeks to enhance your life, not take it over.
-          <br><br>
-          Can a game help you to relax? Can a game add balance to your day? We think so! Our goal is to create a satisfying yet calming mobile gaming experience: A Tamagotchi for the Soul.
-          <br><br>
-          We hope you will find peace in this simple activity.
-          <br><br>
-          <b>Features:</b>
+          Some <b>unique features</b> that I implemented in the game:
           <br>
           <ul>
-            <li>Dynamic game weather based on player location</li>
-            <li>Original soundtrack by renowned composer Michiyo Yagi</li>
-            <li>Seasonal scenery inspired by Japanese prints</li>
-            <li>22 Color Grades</li>
-            <li>8 Animal Badges</li>
-            <li>Pay once, play forever</li>
-            <li>No subscriptions, in-app purchases or advertisements</li>
+            <li>Dynamic game <b>weather system</b> based on player location.</li>
+            <li><b>Ever-changing seasonal scenery</b> based on time of year.</li>
+            <li>A very zen <b>achievement system</b> featuring 22 Color Grades & 8 Animal Badges.</li>
           </ul>
-          Find more about the game <a href="http://www.chopwoodgame.com/">here</a>.
-          <br><br>
-          Copyright © 2017 Sage Immersive Realities Inc. All Rights Reserved.
+          <center>
+            <a class="btn btn-outline-dark btn-lg" target="_blank" href="http://chopwoodgame.com/" role="button">Read More</a>
+            <br><br>
+            Copyright © 2017 Sage Immersive Realities Inc. All Rights Reserved.
+          </center>
+
         </div>
 
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
