--- a/work/index.html
+++ b/work/index.html
@@ -45,23 +45,44 @@
       </div>
 
     </nav>
+    
+    <hr>
 
     <!-- Work -->
     <div class="container-fluid fadeIn portfolio" id="work">
 
       <div class="row">
+
+        <!-- Mirrors -->
+        <div class="col-md-6">
+            <img src="mirrors/cover.png" class="img-fluid" alt="Mirrors">
+            <a href="mirrors/">
+              <div class="overlay">
+                <div class="text">
+                  <h3>Mirrors</h3>
+                  <h6>Game Designer and Developer</h6>
+                </div>
+              </div>
+            </a>
+          </div>
+
         <!-- Pizza Craft -->
-        <div class="col-md-7">
+        <div class="col-md-6">
           <img src="pizzacraft/cover.png" class="img-fluid" alt="Pizza Craft">
           <a href="pizzacraft/">
             <div class="overlay">
               <div class="text">
                 <h3>Pizza Craft</h3>
-                <h6>Game Developer</h6>
+                <h6>Game Developer | UltraMelon</h6>
               </div>
             </div>
           </a>
         </div>
+
+      </div>
+
+      <div class="row last-row">
+
         <!-- Chop Wood -->
         <div class="col-md-5">
           <img src="chopwood/cover.png" class="img-fluid" alt="Chop Wood">
@@ -69,70 +90,35 @@
             <div class="overlay">
               <div class="text">
                 <h3>Chop Wood</h3>
-                <h6>Game Developer</h6>
+                <h6>Game Developer | Sage Realities</h6>
               </div>
             </div>
           </a>
         </div>
-      </div>
 
-      <div class="row">
-        <!-- Chop Wood Zen Master -->
-        <div class="col-md-3">
-          <img src="zenmaster/1.jpg" class="img-fluid" alt="Chop Wood Zen Master">
-          <div class="overlay">
-            <div class="text">
-              <h3>Chop Wood Zen Master</h3>
-              <h6>Game Developer</h6>
-            </div>
-          </div>
-        </div>
-        <!-- Mirrors -->
-        <div class="col-md-6">
-          <img src="mirrors/cover.jpg" class="img-fluid" alt="Mirrors">
-          <div class="overlay">
-            <div class="text">
-              <h3>Mirrors</h3>
-              <h6>Solo</h6>
-            </div>
-          </div>
-        </div>
-        <!-- Wrong Lane -->
-        <div class="col-md-3">
-          <img src="wronglane/1.png" class="img-fluid" alt="Wrong Lane">
-          <div class="overlay">
-            <div class="text">
-              <h3>Wrong Lane</h3>
-              <h6>Solo</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
         <!-- Crazy Jumper -->
-        <div class="col-md-6">
+        <div class="col-md-7">
           <img src="crazyjumper/cover.jpg" class="img-fluid" alt="Crazy Jumper">
-          <div class="overlay">
-            <div class="text">
-              <h3>Crazy Jumper</h3>
-              <h6>Solo</h6>
+          <a href="crazyjumper/">
+            <div class="overlay">
+              <div class="text">
+                <h3>Crazy Jumper</h3>
+                <h6>Game Developer | Gameloop</h6>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-        <!-- Adventure Island -->
-        <div class="col-md-6">
-          <img src="adventureisland/cover.jpg" class="img-fluid" alt="Adventure Island">
-          <div class="overlay">
-            <div class="text">
-              <h3>Adventure Island</h3>
-              <h6>Solo</h6>
-            </div>
-          </div>
-        </div>
+
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
