--- a/personal/gameoflife/index.html
+++ b/personal/gameoflife/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-light fadeIn" id="myNavbar">
       
       <!-- Brand -->
-      <a class="navbar-brand" href="../../index.html">Nikhil Jolly</a>
+      <a class="navbar-brand" href="../../">Nikhil Jolly</a>
 
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,18 +33,20 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto nav-pills" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link active" id="personal-tab" href="../../index.html#personal">personal</a>
+            <a class="nav-link active" id="personal-tab" href="../../">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="work-tab" href="../../index.html#work">work</a>
+            <a class="nav-link" id="work-tab" href="../../work/">work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about-tab" href="../../index.html#about">about</a>
+            <a class="nav-link" id="about-tab" href="../../about/">about</a>
           </li>
         </ul>
       </div>
 
     </nav>
+
+    <hr>
 
     <!-- Post -->
 
@@ -53,13 +55,22 @@
       <div class="row">
 
         <!-- Description -->
-        <div class="col-md-12 post-text">
+        <div class="col-xl-5 video-col">
 
-          <h2>Conway's Game of Life</h2>
+          <h2 class="title">Conway's Game of Life</h2>
+          <img src="life.gif" class="img-fluid" alt="Game of life GIF">
           <br>
+          <a class="btn btn-outline-dark btn-lg" target="_blank" href="http://nikhiljolly.com/conwaysgameoflife/" role="button">Play</a>
+
+        </div>
+
+        <div class="col-xl-7 post-text">
+
           <h5>The Game of Life, also known simply as Life, is a cellular automaton devised by the British mathematician John Horton Conway in 1970.</h5>
           <br>
-          The "game" is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the Game of Life by creating an initial configuration and observing how it evolves, or, for advanced "players", by creating patterns with particular properties. This is a simulation project based on the same concept.
+          Conway's game is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the game of life by creating an initial configuration and observing how it evolves, or, for advanced players, by creating patterns with particular properties.
+          <br><br>
+          This is an <b>open source simulation project</b> I made completely from scratch based on the same concept.
           <br><br>
           <b>Instructions:</b>
           <br>
@@ -91,17 +102,24 @@
               Gosper's Glider Gun: Used to initiate the cells with seed of Gosper's GG.
             </li>
           </ul>
-          Play in the browser <a href="http://nikhiljolly.com/conwaysgameoflife/">here</a>.
+          Play in the browser <a href="http://nikhiljolly.com/conwaysgameoflife/" class="text-info">here</a>.
           <br>
-          In depth explanation at <a href="https://github.com/nikhiljolly/conwaysgameoflife/">github</a>.
+          In depth explanation at <a href="https://github.com/nikhiljolly/conwaysgameoflife/" class="text-info">github</a>.
           <br>
-          Ream more about Conway's Game of Life at <a href="https://en.wikipedia.org/wiki/Conway's_Game_of_Life">wiki</a>.
+          Ream more about Conway's Game of Life at <a href="https://en.wikipedia.org/wiki/Conway's_Game_of_Life" class="text-info">wiki</a>.
 
         </div>
 
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
