--- a/personal/tinylittleboat/index.html
+++ b/personal/tinylittleboat/index.html
@@ -45,6 +45,8 @@
       </div>
 
     </nav>
+    
+    <hr>
 
     <!-- Post -->
 
@@ -53,66 +55,52 @@
       <div class="row">
 
         <!-- Gallery -->
-        <div class="col-xl-6 post-carousel">
+        <div class="col-xl-6 video-col">
 
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="0.png" alt="boat 1">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="1.png" alt="boat 2">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="2.png" alt="boat 3">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="3.png" alt="boat 4">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+          <h2 class="title">tiny little boat</h2>
+
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tVdfs6zLhtk?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           </div>
+          
+          <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://nikhiljolly.itch.io/tiny-little-boat" role="button">Play</a>
+
         </div>
 
         <!-- Description -->
         <div class="col-xl-6 post-text">
-
-          <h2>tiny little boat</h2>
-          <br>
           <h5>Float your tiny little boat and indulge yourself in this zen experience.</h5>
           <br>
-          <b>Controls:</b>
+          Tiny little boat is a game that I <b>made in a week</b> for the WeeklyGameJam 16. The theme of the jam was, <b>Zen</b>. Overall, it was quite a nice experience to <b>design and create something different</b> unlike the common gamey stuff.
           <br><br>
-          Use W, A, S, D or Up, Down, Left, Right to float the boat.
+          My primary reason to take part in this game jam was to improve my design thinking and skills. Thereby some of the underlying art wasn't developed by me. Also, considering the limited time that I had, I primarily wanted to <b>focus on design</b>.
           <br><br>
-          <b>Credits:</b>
-          <br><br>
-          Created by Nikhil Jolly in a week for WeeklyGameJam 16.
-          <br><br>
-          Music by Eric Matyas - www.soundimage.org
-          <br><br>
-          Special Thanks to Peayush Bhardhwaj.
-          <br><br>
-          Play the game at <a href="https://nikhiljolly.itch.io/tiny-little-boat">itch</a>.
+          Here's a list of things that I did from scratch:
+          <ul>
+            <li><b>Ideation and game design</b></li>
+            <li><b>UI and Level design</b></li>
+            <li><b>Complete development and programming</b></li>
+          </ul>
+          And here's a list of the free resources that I used:
+          <ul>
+            <li><a href="https://assetstore.unity.com/packages/3d/lowpoly-paper-boat-61369" class="text-info">Lowpoly Paper Boat</a></li>
+            <li><a href="http://kenney.nl/assets/nature-pack-extended" class="text-info">Kenny's nature pack</a></li>
+            <li><a href="https://assetstore.unity.com/packages/3d/vegetation/low-poly-foliage-66638" class="text-info">Lowpoly foliage</a></li>
+            <li><a href="http://www.soundimage.org" class="text-info">Music by Eric Matyas</a></li>
+          </ul>
 
         </div>
 
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
