--- a/work/crazyjumper/index.html
+++ b/work/crazyjumper/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Dead Dreams by Nikhil Jolly</title>
+    <title>Crazy Jumper by Gameloop</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,10 +33,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto nav-pills" id="pills-tab">
           <li class="nav-item">
-            <a class="nav-link active" id="personal-tab" href="../../">personal</a>
+            <a class="nav-link" id="personal-tab" href="../../">personal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="work-tab" href="../../work/">work</a>
+            <a class="nav-link active" id="work-tab" href="../../work/">work</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="about-tab" href="../../about/">about</a>
@@ -57,31 +57,26 @@
         <!-- Gallery -->
         <div class="col-xl-6 video-col">
 
-          <h2 class="title">Dead Dreams</h2>
+          <h2 class="title">Crazy Jumper</h2>
 
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GRKUUmJLFjk?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bCgwQ94wjBE?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           </div>
 
-          <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://nikhiljolly.itch.io/dead-dreams" role="button">Play</a>
+          <a class="btn btn-outline-dark btn-lg" target="_blank" href="https://play.google.com/store/apps/details?id=com.gameloop.crazyjumper" role="button">Play</a>
 
         </div>
 
         <!-- Description -->
         <div class="col-xl-6 post-text">
-
-          <div class="d-none d-xl-block"><br><br></div>
-          <h5>A game about an ordinary boy, with an extraordinary childhood, marred with stressful memories.
-          Will he be able to survive another nightmare?</h5>
-          <br>
-          Dead Dreams is a game that I made with Rahul Parihar <b>in 2 days</b> for the BYOG 17 game jam. In the game you play as a boy who is harrassed by dark memories and has to fight back with the few good memories that he reminisces.
-          <br><br>
-          The game was <b>built from scratch</b> in Unity3d. I primarily <b>focused on development</b>, while Rahul focused on making the 3d art and models. We both worked together in the <b>ideation and game design</b> process. After a lot of dabbling around with lights and post-processing effects, we finalized the <b>low-poly pixel art style</b> that you can currently see in the game.
-          <br><br>
-          <b>Guide:</b>
-          <br>
-          Press left click to call good memories towards you, and release to shoot.
-
+            <div>
+                <div class="d-none d-xl-block"><br><br><br><br><br></div>
+                <h5>Double jump between platforms and make the highest score.</h5>
+                <br>
+                Crazy Jumper is a <b>minimal endless-runner</b> game that I made for Gameloop. As the <b>sole developer</b> on the team my responsibility was to develop the game from <b>scratch in Unity</b>. The game was primarily developed for the <b>Android platform</b>.
+                <br><br>
+                Copyright © 2017 Gameloop. All Rights Reserved.
+            </div>
         </div>
 
       </div>
