--- a/work/pizzacraft/index.html
+++ b/work/pizzacraft/index.html
@@ -46,57 +46,38 @@
 
     </nav>
 
+    <hr>
 
     <!-- Post -->
 
-    <div class="container-fluid post slideUp">
+    <div class="container-fluid post fadeIn">
 
       <div class="row">
 
         <!-- Gallery -->
-        <div class="col-xl-6 post-carousel">
+        <div class="col-xl-6 video-col">
 
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="1.jpg" alt="Pizza Craft 1">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="2.jpg" alt="Pizza Craft 2">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="3.jpg" alt="Pizza Craft 3">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+          <h2 class="title">Pizza Craft</h2>
+
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xpI5uKiHLJs?rel=0&showinfo=0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           </div>
+
         </div>
 
         <!-- Description -->
         <div class="col-xl-6 post-text">
 
-          <h2>Pizza Craft</h2>
+          <h5>The easy and fun way to make delicious pizzas for your customers.</h5>
           <br>
-          <h5>Become the best pizza crafter!</h5>
-          <br>
+          Pizza Craft is a casual fun game that I made for UltraMelon Apps. As the <b>sole developer</b> on the team my responsibility was to program the game from <b>scratch in Unity</b>. The game was primarily developed for the <b>iOS platform</b>.
+          <br><br>
           <b>How to play:</b>
           <br>
           <ul>
-            <li>Tap & drag to place the ingredients</li>
+            <li>Tap & drag to place the ingredients.</li>
             <li>Speed Increases the farther you get!</li>
-            <li>Use all 5 ingredients to make what the customers want</li>
+            <li>Use all 5 ingredients to make what the customers want.</li>
             <li>Craft like a pro and get the highest score!</li>
           </ul>
           <b>Features:</b>
@@ -107,13 +88,20 @@
             <li>5 yummy ingredients to use to make a pizza!</li>
           </ul>
           <br>
-          Copyright © 2017 UltraMelon Apps. All Rights Reserved.
+          <center>Copyright © 2017 UltraMelon Apps. All Rights Reserved.</center>
 
         </div>
 
       </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container-fluid">
+        Designed with <i class="fa fa-heart-o"></i> using <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>.
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
